resources/ui/style/overrides.css
/* Kurozora Overrides */

/* Start Override GTK classes */

.sidebar {
    border-width: 0px;
}

.navigation-sidebar {
    background-color: rgba(0,0,0,0);
    border-color: rgba(0,0,0,0);
}

/* End Override GTK classes */

/* Start Custom CSS classes */

    /* Common */
label.page-header {
    font-size: 28pt;
    font-weight: bold;
}

label.section-header {
    font-size: 18pt;
    font-weight: bold;
}

.large-button {
    padding-right: 2em;
    padding-left: 2em;
    padding-top: 1.2em;
    padding-bottom: 1.2em;
    font-weight: bold;
    font-size: 13pt;
}

separator.thick-separator {
    padding: 0.6px;
}

/* Explore */
.featured-show-preview {
    min-height: 20em;
    min-width: 36em; /*TODO: This ia a workaround to avoid shrinkage, fix it!*/
    border-radius: 10px;
}

.featured-show-overlay-box {
    padding-bottom: 1.2em;
    padding-left: 2em;
    padding-right: 2em;
    padding-top: 6em;
    background-image: linear-gradient(rgba(0,0,0,0), rgba(200,200,200,0.8));
    border-radius: 10px;
}

.featured-show-overlay-box-label-title {
    font-size: 18pt;
    font-weight: bold;
    color: black;
}

.featured-show-overlay-box-label-subtitle {
    font-size: 15pt;
    color: black;
}

.entry-poster-preview-picture {
    border-radius: 10px;
    min-width: 99pt;
    min-height: 176pt;
}

.entry-poster-preview-title {
    font-size: 13pt;
}

.entry-poster-preview-subtitle {
    font-size: 10pt;
    color: rgb(170,170,170);
}

.entry-poster-preview-rating-label-color {
    /*TODO: Fix this color*/
    color: darkorange;
    font-size: 12pt;
}

.entry-poster-preview-rating-icon-color {
    /*
        Color taken by a copied answer + some playing around
        there is probably a better filter for this.
    */
    filter: invert(0.5) sepia(1) saturate(10) hue-rotate(1deg);
    /*-gtk-icon-size: 11pt;*/
}

@keyframes featured-show-preview-loading-animation {
    0% {
        background-image: linear-gradient(0.45turn, rgba(255,255,255,0.5), rgba(0,0,0,0) 70%);
    }

    50% {
        background-image: linear-gradient(0.45turn, rgba(0,0,0,0), rgba(255,255,255,0.5) 70%);
    }

    100% {
        background-image: linear-gradient(0.45turn, rgba(255,255,255,0.5), rgba(0,0,0,0) 70%);
    }
}

.featured-show-preview-loading {
    background-color: rgb(120,120,120);
    animation-name: featured-show-preview-loading-animation;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    border-radius: 10px;
}

.quick-link {
    font-weight: bold;
    font-size: 12pt;
    padding: 1.8em;
    border-style: solid;
    border-bottom-width: 1px;
    border-bottom-color: rgba(255,255,255,0.2);
    transition: all 0.25s ease;
}

.quick-link:hover {
    background-color: rgba(255,255,255,0.2);
}

.quick-link:active {
    background-color: rgba(255,255,255,0.5);
}

.privacy-label-popup-title {
    font-size: 28pt;
    font-weight: bold;
    padding: 1em;
}

.privacy-label-popup-text {
    background-color: rgba(0,0,0,0);
}

/* End Custom CSS classes */

